Change http only cookie auth
